--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,15 @@
 }
 
 /* header file style  */
+.header {
+    padding-top: 5px;
+    background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right, left;
+    background-size: contain;
+}
+
 #nav-title {
     font-size: 30px;
 }
@@ -68,5 +77,45 @@ a {
 
 .banner-description {
     color: rgb(2, 2, 34);
+    font-weight: 500;
     margin: 15px 0;
+}
+
+/* About me section  */
+
+.section-title {
+    margin-bottom: 20px;
+}
+
+.about-me {
+    max-width: 1140px;
+    margin: 100px auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 30px;
+    border-radius: 10px;
+}
+
+.about-info {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.info-title {
+    color: #757575;
+}
+
+.info-detail {
+    color: black;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+/* skills area  */
+.skills {
+    max-width: 1140px;
+    margin: auto;
+    text-align: center;
+
 }
