--- a/style/style.css
+++ b/style/style.css
@@ -85,6 +85,7 @@ a {
 
 .section-title {
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .about-me {
@@ -116,6 +117,23 @@ a {
 .skills {
     max-width: 1140px;
     margin: auto;
-    text-align: center;
 
+}
+
+.skill {
+    width: 200px;
+    height: 250px;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 70px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 10px;
+
+}
+
+.skill-title {
+    margin: 15px 0;
+}
+
+.skill img {
+    margin-top: 15px;
 }
