--- a/style/style.css
+++ b/style/style.css
@@ -95,7 +95,8 @@ a {
 .banner-description {
     color: rgb(2, 2, 34);
     font-weight: 500;
-    margin: 15px 0;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 /* About me section  */
@@ -165,4 +166,51 @@ a {
 
 .each-section {
     margin: 15px 0;
+}
+
+.resume-btn {
+    margin: 50px 0;
+    text-align: center;
+}
+
+/* contact us section  */
+.contact {
+    display: flex;
+    background-color: #FFF8F3;
+}
+
+.connect {
+    width: 35%;
+    margin: 10px auto;
+}
+
+.contact-head {
+    margin: 10px 0;
+}
+
+.contact-details {
+    margin-bottom: 18px;
+}
+
+.social-icon {
+    margin-right: 25px;
+}
+
+.message input,
+textarea {
+    border: 0;
+    width: 65%;
+    margin-bottom: 15px;
+    padding: 10px;
+    color: black;
+    font-weight: 800;
+    box-shadow: 10px 10px 30px #fdeee2;
+}
+
+/* footeer style  */
+footer {
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 700;
+    background-color: #FFF8F3;
 }
