--- a/style/style.css
+++ b/style/style.css
@@ -210,7 +210,7 @@ textarea {
 /* footeer style  */
 footer {
     text-align: center;
-    margin-top: 50px;
+    padding-top: 50px;
     font-weight: 700;
     background-color: #FFF8F3;
 }
